--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <div class="ask">
-      <h4>Ask your coach anything:</h4>
+      <p>Ask your coach anything</p>
       <form action="/answer" class="form-inline">
         <div class="form-group mb-2">
           <input type="text" class="form-control" name="question" id="inputPassword2" placeholder="Tap your question">
